Switch the 'image' task from Groovy to Java